--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-d3-components",
+  "private": true,
   "version": "0.4.8",
   "description": "D3 components for React",
   "main": "lib/index.js",
